@@ -38,6 +38,7 @@ systemd System and Service Manager
  		• sd_bus_message_get_seqnum;
  		• sd_bus_message_get_monotonic_usec;
  		• sd_bus_message_set_priority;
+ 		• sd_bus_message_get_priority;
  	- remove “BusTransport” enum;
  	- allow naming event sources;
  	- use event source name rather than address in debug messages;
